# svc-template-rust

./: .LICENSE  .cspell.project-words.txt  .editorconfig  .env.base  .env.repo  .link-checker.config.json  .terraform_init  .tofu_init  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  compose.yaml  docker-compose.yml  log4rs.yaml  requirements.txt
.cargo/: config.toml
.cargo-husky/hooks/: pre-commit  pre-push
.compose/aetheric-cache/: services.yaml
.compose/aetheric-db/: services.yaml
.compose/aetheric-db/scripts/: init-ssl.sh
.compose/aetheric-gis/: services.yaml
.compose/aetheric-gis/scripts/: init-ssl.sh
.compose/aetheric-queue/: services.yaml
.compose/aetheric-svc/: base.yaml  rust-coverage.yaml  rust-test.yaml  svc.yaml  test-server.yaml
.github/workflows/: api_docs.yml  autosquash.yml  editorconfig_check.yml  post_release.yml  python_ci.yml  release.yml  rust_ci.yml
.make/: rust.mk
client-grpc/: Cargo.toml  README.md
client-grpc/examples/: grpc.rs
client-grpc/src/: client.rs  grpc.rs  lib.rs  prelude.rs  service.rs
client-grpc/tests/: integration_test.rs
client-rest/: Cargo.toml  README.md
client-rest/examples/: rest.rs
client-rest/src/: lib.rs
docs/: conops.md  icd.md  sdd.md
openapi/: types.rs
proto/: svc-template-grpc.proto  svc-template-rust-grpc.proto
server/: Cargo.toml  README.md  build.rs
server/src/: config.rs  grpc.rs  grpc_clients.rs  lib.rs  main.rs  rest_api.rs  test_util.rs
server/src/grpc/: client.rs  mod.rs  server.rs
server/src/rest/: api.rs  macros.rs  mod.rs  server.rs
server/src/rest/api/: example.rs  health.rs  mod.rs
server/tests/: integration_test.rs
src/: main.rs  tmp_lib.rs
test/: __init__.py  test.py
tests/: integration_test.rs
