[workspace]
members  = ["server", "client-grpc", "client-rest"]
resolver = "2"

[workspace.package]
authors      = ["Aetheric <info@aetheric.nl>"]
edition      = "2021"
homepage     = "https://www.aetheric.nl"
license-file = "LICENSE"
repository   = "https://github.com/aetheric-oss/svc-template-rust"

categories = [
  "aerospace::drones",
  "aerospace::protocols",
] # max 5 -- https://crates.io/category_slugs
