[package]
description = "Arrow template service gRPC client"
name        = "svc-template-rust-client-grpc"
version     = "0.2.0-develop.6"

categories.workspace   = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license-file.workspace = true
repository.workspace   = true

[features]
# Will implement mock functions for the client, only use for tests!
mock_client = ["tower", "tokio", "lib-common/grpc_mock", "svc-template-rust"]

[dependencies]
log               = { version = "0.4" }
prost             = "0.11"
prost-types       = "0.11"
svc-template-rust = { path = "../server", optional = true }
tonic             = "0.8"
tower             = { version = "0.4", optional = true }

[dependencies.lib-common]
features = ["grpc"]
git      = "https://github.com/Arrow-air/lib-common.git"
tag      = "v0.1.1-develop.2"

[dependencies.tokio]
features = ["macros", "rt-multi-thread"]
optional = true
version  = "1.28"

[dev-dependencies]
logtest = "2.0"

# Make sure we enable the 'mock_client' features when running tests
[dev-dependencies.svc-template-rust-client-grpc]
features = ["mock_client"]
path     = "."

[[example]]
name = "grpc"
