[package]
description = "Arrow template-rust service gRPC client"
keywords    = ["vtol", "client", "grpc", "template-rust"] # max 5
name        = "svc-template-rust-client-grpc"
version     = "0.2.0-develop.7"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
homepage.workspace     = true
license-file.workspace = true
repository.workspace   = true

[features]
dev       = ["mock", "tokio"]
test_util = ["mock", "stub_backends", "tokio"]
# Will add a 'mock' module for the enabled resources, providing access to mock data generation functions
mock = []
# Will use a stubbed server connection, only use for tests!
stub_backends = [
  "svc-template-rust/stub_server",
  "lib-common/grpc_mock",
  "tower",
]
# Will implement stub functions for the client, only use for tests!
stub_client = ["svc-template-rust"]

[dependencies]
cfg-if            = "1.0"
log               = { version = "0.4" }
prost             = "0.12"
svc-template-rust = { path = "../server", optional = true }
tonic             = "0.10"
tower             = { version = "0.4", optional = true }

[dependencies.lib-common]
features = ["grpc"]
git      = "https://github.com/Arrow-air/lib-common.git"
tag      = "latest-develop"

[dependencies.tokio]
features = ["macros", "rt-multi-thread"]
optional = true
version  = "1.33"

[dev-dependencies]
logtest = "2.0"

# Make sure we enable the required modules for testing
[dev-dependencies.svc-template-rust-client-grpc]
features = ["dev"]
path     = "."

[[example]]
name = "grpc"
