[package]
description = "Arrow template-rust service REST client"
keywords    = ["vtol", "client", "rest", "template-rust"] # max 5
name        = "svc-template-rust-client-rest"
version     = "0.2.0-develop.7"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
homepage.workspace     = true
license-file.workspace = true
repository.workspace   = true

[dependencies]
chrono     = { version = "0.4", features = ["serde"] }
serde      = "1.0"
serde_json = "1.0"

[dependencies.utoipa]
features = ["axum_extras", "chrono"]
version  = "4.0"

[dev-dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.33", features = ["full"] }
uuid  = { version = "1.4", features = ["v4"] }

[dev-dependencies.lib-common]
features = ["grpc"]
git      = "https://github.com/Arrow-air/lib-common.git"
tag      = "latest-develop"

[[example]]
name = "rest"
