[package]
description = "Aetheric template-rust service REST client"
keywords    = ["vtol", "client", "rest", "template-rust"]  # max 5
name        = "svc-template-rust-client-rest"
version     = "0.2.0-develop.8"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
homepage.workspace     = true
license-file.workspace = true
repository.workspace   = true

[dependencies]
serde      = "1.0"
serde_json = "1.0"

[dependencies.utoipa]
features = ["axum_extras", "chrono"]
version  = "4.2"

[dependencies.lib-common]
features = ["grpc"]
git      = "https://github.com/aetheric-oss/lib-common.git"
tag      = "latest-develop"                                 # should be version tag for non-dev releases

[dev-dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.33", features = ["full"] }

[[example]]
name = "rest"
