[package]
description = "Aetheric template-rust service REST client"
keywords    = ["vtol", "client", "rest", "template-rust"]  # max 5
name        = "svc-template-rust-client-rest"
version     = "0.2.0-develop.9"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
homepage.workspace     = true
license-file.workspace = true
repository.workspace   = true

[dependencies]
serde      = "1.0"
serde_json = "1.0"

[dependencies.utoipa]
features = ["axum_extras", "chrono"]
version  = "4.2"

[dependencies.lib-common]
features = ["grpc"]
git      = "https://github.com/aetheric-oss/lib-common.git"
tag      = "v3.0.0"

[dev-dependencies]
http-body-util = { version = "0.1" }
hyper          = { version = "1.4", features = ["full"] }
hyper-util     = { version = "0.1" }
tokio          = { version = "1.40", features = ["full"] }

[[example]]
name = "rest"

# https://github.com/xd009642/tarpaulin?tab=readme-ov-file#ignoring-code-in-files
# removes warnings introduced by rust 1.8
# can be removed when the cfg attributes can be replaced with `#[coverage(off)]` (currently only available in nightly)
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
