[package]
description = "Arrow template service GRPC server"
name        = "svc-template-rust"
version     = "0.2.0-develop.6"

categories.workspace   = true
edition.workspace      = true
homepage.workspace     = true
keywords.workspace     = true
license-file.workspace = true
repository.workspace   = true

[features]
# Will implement mock functions for the server, only use for tests!
mock             = []
mock_server      = ["mock"]
vendored-openssl = ['openssl/vendored']

[dependencies]
anyhow       = "1.0"
axum         = "0.6"
cargo-husky  = "1"
chrono       = { version = "0.4", features = ["serde"] }
clap         = { version = "4.0", features = ["derive"] }
config       = "0.13"
dotenv       = "0.15"
futures      = "0.3"
hyper        = "0.14"
lib-common   = { git = "https://github.com/Arrow-air/lib-common.git", tag = "v0.1.1-develop.2" }
log          = "0.4"
openssl      = "0.10"
prost        = "0.11"
prost-build  = "0.11"
prost-types  = "0.11"
serde        = "1.0"
serde_json   = "1.0"
tokio        = { version = "1.28", features = ["full"] }
tokio-util   = "0.7"
tonic        = "0.8"
tonic-health = "0.8"

# FIXME: This is used as an example, you can point to other services's clients instead.
[dependencies.svc-template-rust-client-grpc]
git = "https://github.com/Arrow-air/svc-template-rust.git"
tag = "v0.2.0-develop.4"

[dependencies.utoipa]
features = ["axum_extras", "chrono"]
version  = "3.1"

[dependencies.log4rs]
features = [
  "background_rotation",
  "rolling_file_appender",
  "json_format",
  "gzip",
]
version = "1.2"

[dev-dependencies]
logtest = "2.0"

[dev-dependencies.cargo-husky]
default-features = false          # Disable features which are enabled by default
features         = ["user-hooks"]
version          = "1"

# FIXME: This is used as an example, you can point to other services's clients instead.
[dev-dependencies.svc-template-rust-client-grpc]
features = ["mock_client"]
git      = "https://github.com/Arrow-air/svc-template-rust.git"
tag      = "v0.2.0-develop.4"

# Make sure we enable the 'mock_server' features when running tests
[dev-dependencies.svc-template-rust]
features = ["mock_server"]
path     = "."

[build-dependencies]
tonic-build = "0.8"
