[package]
description = "Aetheric template service gRPC server"
keywords    = ["vtol", "server", "grpc", "rest", "template-rust"] # max 5
name        = "svc-template-rust"
version     = "0.2.0-develop.8"

authors.workspace      = true
categories.workspace   = true
edition.workspace      = true
homepage.workspace     = true
license-file.workspace = true
repository.workspace   = true

[features]
default          = []
dev              = ["mock"]
test_util        = ["mock", "stub_backends"]
vendored-openssl = ["openssl/vendored"]
# Will add a 'mock' module for the enabled resources, providing access to mock data generation functions
mock = []
# Will use a stubbed backend connection, only use for tests!
stub_backends = [
  # FIXME: add mock_clients of actual services you're depending on
  "svc-storage-client-grpc/stub_client",
]
# Will implement stub functions for the server, only use for tests!
stub_server = ["test_util"]
# Only added to support client-grpc feature when running tests
stub_client = ["stub_backends"]

[dependencies]
anyhow       = "1.0"
axum         = { version = "0.7", features = ["macros"] }
cargo-husky  = "1"
clap         = { version = "4.5", features = ["derive"] }
config       = "0.14"
dotenv       = "0.15"
hyper        = "1.4"
log          = "0.4"
openssl      = "0.10"
prost        = "0.13"
serde        = "1.0"
serde_json   = "1.0"
tokio        = { version = "1.40", features = ["full"] }
tokio-util   = "0.7"
tonic        = "0.12"
tonic-health = "0.12"
tower        = { version = "0.5", features = ["limit", "buffer"] }
tower-http   = { version = "0.6", features = ["cors", "trace"] }

# ========================================================
# FIXME: This is used as an example, you can point to other services's clients instead.
# ========================================================
[dependencies.svc-template-rust-client-grpc]
git = "https://github.com/aetheric-oss/svc-template-rust.git"
tag = "latest-develop"                                        # should be version tag for non-dev releases

[dependencies.svc-storage-client-grpc]
features = ["adsb"]
git      = "https://github.com/aetheric-oss/svc-storage"
tag      = "latest-develop"                              # should be version tag for non-dev releases
# ========================================================

[dependencies.lib-common]
git = "https://github.com/aetheric-oss/lib-common"
tag = "v3.0.0"

[dependencies.log4rs]
features = [
  "background_rotation",
  "rolling_file_appender",
  "json_format",
  "gzip",
]
version = "1.3"

[dependencies.utoipa]
features = ["axum_extras", "chrono"]
version  = "4.2"

[dev-dependencies]
logtest = "2.0"

[dev-dependencies.cargo-husky]
default-features = false          # Disable features which are enabled by default
features         = ["user-hooks"]
version          = "1"

# Make sure we enable the required modules when running tests
[dev-dependencies.svc-template-rust]
features = ["dev"]
path     = "."

[build-dependencies]
tonic-build = "0.12"

# https://github.com/xd009642/tarpaulin?tab=readme-ov-file#ignoring-code-in-files
# removes warnings introduced by rust 1.8
# can be removed when the cfg attributes can be replaced with `#[coverage(off)]` (currently only available in nightly)
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
